# Dashboard

./: .env.example  .gitignore  README.md  project.md  pyproject.toml
config/: dashboard.yaml
src/dashboard/: main.py  scheduler.py  settings.py
src/dashboard/adapters/calendar/: __init__.py  base.py  ics.py
src/dashboard/adapters/finance/: __init__.py  base.py  stooq_coingecko.py
src/dashboard/adapters/news/: __init__.py  base.py  rss.py
src/dashboard/adapters/photos/: __init__.py  base.py  local_folder.py
src/dashboard/adapters/quotes/: __init__.py  base.py  on_this_day_wikipedia.py  quotable.py
src/dashboard/adapters/sports/: __init__.py  base.py  thesportsdb.py
src/dashboard/adapters/transit/: __init__.py  base.py  transport_rest.py
src/dashboard/adapters/weather/: __init__.py  base.py  open_meteo.py
src/dashboard/domain/: __init__.py  models.py
src/dashboard/location/: __init__.py  service.py
src/dashboard/storage/: __init__.py  cache.py  db.py
src/dashboard/web/static/: app.css  app.js
src/dashboard/web/templates/: dashboard.html  layout.html
src/dashboard/web/templates/components/: modal.html  tile_calendar.html  tile_finance.html  tile_news.html  tile_photo.html  tile_quote.html  tile_sports.html  tile_transit.html  tile_weather.html
