[project]
name = "rpi-dashboard"
version = "0.1.0"
description = "Local-first dashboard for Windows and Raspberry Pi."
readme = "project.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]
